# bwa-rust

./: .gitignore  .typos.toml  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  SITE_DEPLOY.md  clippy.toml  deny.toml  package-lock.json  package.json  rust-toolchain.toml
.cargo/: config.toml
.claude/commands/opsx/: explore.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/openspec-explore/: SKILL.md
.claude/skills/verify/: SKILL.md
.github/: CODEOWNERS  DEPENDENCIES.md  DEPLOY.md  FUNDING.yml  OPTIMIZATION_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: audit.yml  bench.yml  ci.yml  coverage.yml  docs.yml  links.yml  pages.yml  pr-automation.yml  release.yml  stale.yml  typos.yml
.windsurf/workflows/: bench.md  build.md  ci-check.md  compare-bwa.md  docs-dev.md  new-module.md  quick-align.md  test.md
benches/: benchmarks.rs
bwa-rust/: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  VERSIONING.md  rustfmt.toml
bwa-rust/.cargo/: config.toml
bwa-rust/.github/ISSUE_TEMPLATE/: bug_report.md
bwa-rust/.github/workflows/: ci.yml
bwa-rust/benches/: benchmarks.rs
bwa-rust/changelog/: README.md  v0.1.0.md
bwa-rust/data/: README.md  toy.fa
bwa-rust/docs/: architecture.md  plan.md  tutorial.md
bwa-rust/examples/: simple_align.rs
bwa-rust/src/: lib.rs  main.rs
bwa-rust/src/align/: candidate.rs  chain.rs  extend.rs  mapq.rs  mod.rs  pipeline.rs  seed.rs  sw.rs
bwa-rust/src/index/: builder.rs  bwt.rs  fm.rs  mod.rs  sa.rs
bwa-rust/src/io/: fasta.rs  fastq.rs  sam.rs
bwa-rust/src/util/: dna.rs
bwa-rust/tests/: integration.rs
changelog/: 2026-02-13-project-completion.md  2026-02-13.md  2026-04-06_alignment-pipeline-hardening-and-docs.md
data/: toy_reads.fq
docs/: README.md  architecture.md  plan.md  tutorial.md
docs/api/: README.md  library-usage.md  library-usage.zh-CN.md
docs/architecture/: README.md  alignment.md  alignment.zh-CN.md  index-building.md  index-building.zh-CN.md  overview.md  overview.zh-CN.md
docs/development/: README.md  ai-workflow.md  tooling.md
docs/superpowers/plans/: 2026-04-29-final-closeout-yolo.md  2026-04-30-paired-end-alignment.md
docs/superpowers/specs/: 2026-04-30-paired-end-alignment-design.md
docs/tutorial/: README.md  algorithms.md  algorithms.zh-CN.md  getting-started.md  getting-started.zh-CN.md
openspec/: config.yaml
openspec/changes/archive/2026-04-23-cli-interface/: proposal.md  tasks.md
openspec/changes/archive/2026-04-23-cli-interface/specs/cli/: spec.md
openspec/changes/archive/2026-04-23-core-alignment/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/archive/2026-04-23-core-alignment/specs/alignment/: spec.md
openspec/changes/archive/2026-04-23-index-building/: proposal.md  tasks.md
openspec/changes/archive/2026-04-23-repository-closeout-normalization/: proposal.md  tasks.md
openspec/changes/archive/2026-04-30-final-closeout-yolo/: proposal.md
openspec/changes/final-closeout-yolo/: design.md  tasks.md
openspec/changes/final-closeout-yolo/specs/ai-development-workflow/: spec.md
openspec/changes/repository-closeout-normalization/: design.md  tasks.md
openspec/changes/repository-closeout-normalization/specs/ai-development-workflow/: spec.md
openspec/changes/repository-closeout-normalization/specs/project-presentation/: spec.md
openspec/changes/repository-closeout-normalization/specs/repository-governance/: spec.md
openspec/specs/ai-development-workflow/: spec.md
openspec/specs/alignment/: spec.md
openspec/specs/alignment-algorithm/: spec.md
openspec/specs/architecture/: design.md
openspec/specs/cli/: spec.md
openspec/specs/index-building/: spec.md
openspec/specs/paired-end-alignment/: design.md  spec.md
openspec/specs/project-presentation/: spec.md
openspec/specs/repository-governance/: spec.md
openspec/specs/testing/: spec.md
scripts/: compare.sh  pre-commit  run_align.sh  run_index.sh  setup-hooks
site/: benchmarks.md  changelog.md  faq.md  index.md  install.md  roadmap.md
site/.vitepress/: config.mts
site/.vitepress/theme/: style.css
site/.vitepress/theme/components/: CopyButton.vue  LanguageSwitch.vue  PwaInstallPrompt.vue
site/.vitepress/theme/utils/: analytics.ts
site/architecture/: algorithms.md  index.md  pipeline.md
site/en/: benchmarks.md  changelog.md  faq.md  index.md  roadmap.md
site/en/architecture/: algorithms.md  index.md  pipeline.md
site/en/deep-dive/: index.md  memory-safety.md  performance.md
site/en/guide/: architecture.md  getting-started.md  index.md  installation.md  quickstart.md  tutorial.md
site/en/specs/: index.md  limitations.md  validation.md
site/guide/: architecture.md  getting-started.md  index.md  installation.md  quickstart.md  tutorial.md
site/public/: browserconfig.xml  robots.txt
site/zh/: faq.md  index.md
site/zh/architecture/: algorithms.md  index.md
site/zh/deep-dive/: index.md  memory-safety.md  performance.md
site/zh/guide/: index.md  installation.md  quickstart.md
site/zh/specs/: index.md  limitations.md  validation.md
specs/: README.md
specs/api/: README.md  cli-interface.md
specs/product/: README.md  core-features.md  paired-end-alignment.md
specs/rfc/: 0001-core-architecture.md  0002-index-building.md  0003-alignment-algorithm.md  0004-paired-end-alignment.md  README.md
specs/testing/: README.md  test-strategy.md
src/: error.rs  lib.rs  main.rs
src/align/: candidate.rs  chain.rs  extend.rs  insert_size.rs  mapq.rs  mod.rs  pipeline.rs  seed.rs  supplementary.rs  sw.rs
src/index/: builder.rs  bwt.rs  fm.rs  sa.rs
src/io/: fasta.rs  fastq.rs  mod.rs  sam.rs
src/util/: dna.rs
tests/: integration.rs  real_data.rs
tests/data/: README.md
(+11 files in other folders)
