[package]
name = "bwa-rust"
version = "0.2.0"
edition = "2021"
authors = ["LessUp"]
description = "A BWA-inspired sequence aligner implemented in Rust, featuring FM-index, SMEM seeding, and banded Smith-Waterman alignment"
license = "MIT"
repository = "https://github.com/LessUp/bwa-rust"
homepage = "https://github.com/LessUp/bwa-rust"
readme = "README.md"
keywords = ["bioinformatics", "bwa", "alignment", "fm-index", "genomics"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"

# ── 依赖 ──────────────────────────────────────────────

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
bincode = "3.0.0"
chrono = "0.4.39"
rayon = "1.10.0"

# jemalloc：替换默认 allocator，补回 musl malloc 性能差距，多线程场景显著提升
# 仅在非 Windows 平台启用（Linux glibc/musl + macOS）
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[features]
default = []
# 启用真实数据测试（需要下载测试数据）
real-data = []

[[bench]]
name = "benchmarks"
harness = false

# ── Lint 配置 ─────────────────────────────────────────

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
needless_collect = "warn"
manual_memcpy = "warn"
large_enum_variant = "warn"
clone_on_ref_ptr = "warn"
redundant_closure_for_method_calls = "warn"
semicolon_if_nothing_returned = "warn"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
too_many_arguments = "allow"
module_name_repetitions = "allow"

# ── Profile 优化 ──────────────────────────────────────

[profile.dev]
opt-level = 0
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.bench]
inherits = "release"
debug = true

[profile.test]
opt-level = 1
debug = true
