[package]
name = "bwa-rust"
version = "0.1.0"
edition = "2021"
authors = ["LessUp"]
description = "A BWA-inspired sequence aligner implemented in Rust, featuring FM-index, SMEM seeding, and banded Smith-Waterman alignment"
license = "MIT"
repository = "https://github.com/LessUp/bwa-rust"
homepage = "https://github.com/LessUp/bwa-rust"
readme = "README.md"
keywords = ["bioinformatics", "bwa", "alignment", "fm-index", "genomics"]
categories = ["science", "command-line-utilities"]
rust-version = "1.70"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
chrono = "0.4"
rayon = "1.10"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
